# sharebyurl

./: LICENSE  Pipfile  README.md  setup.cfg  setup.py
sharebyurl/: __main__.py  main.py
sharebyurl/tests/: helpers.py  test_main.py
