[metadata]
name = sharebyurl
version = 0.2
author = Ingolf Becker
author_email = Ingolf Becker <ingolf.becker@googlemail.com>
description = Create private links shares for local files through your webserver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/watercrossing/sharebyurl
project_urls =
    Documentation = https://github.com/watercrossing/sharebyurl
    Source Code = https://github.com/watercrossing/sharebyurl
    Bug Tracker = https://github.com/watercrossing/sharebyurl/issues
keywords = cli, workflow, file sharing
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
zip_safe = true
python_requires = >=3.6
install_requires =
    argcomplete>=1.9.4, <2.0
    python-slugify>=5.0.0

[options.entry_points]
console_scripts =
    sharebyurl = sharebyurl.main:cli